# aws-lambda-cpp-shim

./: Dockerfile  build.sh  init.sh
runtime/cpp/: CMakeLists.txt
runtime/cpp/src/: cpp_invoker.cpp  handler_response.h  python_interface.c
runtime/cpp/src/lambda/: context.cpp
runtime/python/: __init__.py  proxy.py
